Added AdSense verification meta tag

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/logoZP.png" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1524349145326364"
+     crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
