--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logoZP.png" />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
 <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
 <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
