--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,11 +6,11 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
 <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
-<script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
-<script>
+<!-- <script async src="//www.ezojs.com/ezoic/sa.min.js"></script> -->
+<!-- <script>
     window.ezstandalone = window.ezstandalone || {};
     ezstandalone.cmd = ezstandalone.cmd || [];
-</script>
+</script> -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1524349145326364"
